<resources>
    <string name="app_name">LoginAssignment</string>
    <string name="forgot_password">Forgot your password ?</string>
    <string name="new_user">New User? SIGN UP</string>
    <string name="login_using">Login using</string>

    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_userName_email">Enter Valid User Name Or Email</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="user_name_or_email">User name or email</string>
    <string name="password">Password</string>
</resources>
