<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"

    tools:context="com.brainitec.loginassignment.activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_16sdp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"

            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText_login_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/user_name_or_email"
                android:inputType="textPersonName"
                android:padding="@dimen/_8sdp"
                android:textColorHint="@color/colorPrimary_text"
                android:textSize="@dimen/_14ssp" />

            <EditText
                android:id="@+id/editText_login_passowrd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/_8sdp"
                android:textColorHint="@color/colorPrimary_text"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/tv_forgot_passowrd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:ems="10"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimary_text"
                android:textSize="@dimen/_12ssp" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/rounded_button"
                android:ems="10"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="Sigin In"
                android:textAllCaps="false"
                android:textColor="@color/color_icons"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/tv_newUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:ems="10"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/new_user"
                android:textColor="@color/colorPrimary_text"
                android:textSize="@dimen/_12ssp" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:ems="10"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/login_using"
                android:textColor="@color/colorPrimary_text"
                android:textSize="@dimen/_12ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:src="@drawable/facebook" />

                <ImageView
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:src="@drawable/googleplus" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
